feature: 实现 阶段一：基础架构 + 阶段二：内容处理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,17 @@ spring:
       username: mongo_cTXZaN
       password: mongo_MDNyW6
       database: database
+rss:
+  fetcher:
+    fixed-delay: PT30M
+    initial-delay: PT30S
+    connect-timeout: 5s
+    read-timeout: 10s
+    max-items: 50
+ai:
+  provider:
+    enabled: false
+    endpoint: ''
+    api-key: ''
+    model: gemini-pro
+
