feature: 推荐系统batch嵌入数量控制

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-vector</artifactId>
+            <version>6.6.29.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>space.bitmagic.data</groupId>
+            <artifactId>jpa-spec</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -177,7 +187,6 @@
     </build>
 
 </project>
-
 
 
 
