--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
         <dependency>
             <groupId>com.rometools</groupId>
             <artifactId>rome</artifactId>
-            <version>1.18.0</version>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome-opml</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -108,6 +113,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
         <!--        <dependency>-->
         <!--            <groupId>space.bitmagic.data</groupId>-->
@@ -189,19 +198,40 @@
             <plugin>
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>build-native</id>
+                        <goals>
+                            <goal>compile-no-fork</goal>
+                        </goals>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--initialize-at-run-time=org.postgresql.Driver</buildArg>
+                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
+            <!-- Spring Boot 插件 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <extensions>true</extensions>
                 <configuration>
-                    <!--					<excludes>-->
-                    <!--						<exclude>-->
-                    <!--							<groupId>org.projectlombok</groupId>-->
-                    <!--							<artifactId>lombok</artifactId>-->
-                    <!--						</exclude>-->
-                    <!--					</excludes>-->
+                    <image>
+                        <builder>paketobuildpacks/builder-jammy-base:latest</builder>
+                        <!-- 指定生成的镜像名和标签 -->
+                        <name>192.168.8.233:5000/ifeed:0.0.7</name>
+
+                        <!-- 可选：设置环境变量 -->
+                        <env>
+                            <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                        </env>
+                    </image>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
