--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
       password: ${MONGO_DB_PASSWORD:mongo_MDNyW6}
       database: ${MONGO_DB_DATABASE:i_feed}
   profiles:
-    active: local
+    active: rel
 app:
   # 定时任务
   rss:
@@ -67,7 +67,6 @@ app:
       initial-delay: PT30s
       options:
         recent-behavior-limit: 200
-        default-profile: '科技, 人工智能, 金融科技, 产品设计, 财经, 商业, 社会, 文化, 人物故事, 政治, 国际关系, 娱乐, 生活方式, 音乐, 游戏, 体育, 健康, 教育, 播客, 新闻, 科学, 犯罪悬疑, 环境保护, 历史, 心理学, 文学, 艺术, 创业, 政策, 国际贸易, 网络安全, 航天科技, 健康医疗, 社会经济, 文化评论, 综合'
   # ai 集成
   ai:
     provider:
@@ -88,9 +87,9 @@ app:
   # 检索
   search:
     retrieval:
-      bm25-top-k: 120
+      bm25-top-k: 50
       vector-top-k: 120
-      fusion-top-k: 200
+      fusion-top-k: 50
       bm25-weight: 0.6
       vector-weight: 0.4
       freshness-time-weight: 0.3
