--- a/pom.xml
+++ b/pom.xml
@@ -201,24 +201,24 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>build-native</id>
-                        <goals>
-                            <goal>compile-no-fork</goal>
-                        </goals>
-                        <configuration>
-                            <buildArgs>
-                                <buildArg>--initialize-at-run-time=org.postgresql.Driver</buildArg>
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
-                            </buildArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.graalvm.buildtools</groupId>-->
+<!--                <artifactId>native-maven-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>build-native</id>-->
+<!--                        <goals>-->
+<!--                            <goal>compile-no-fork</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <buildArgs>-->
+<!--                                <buildArg>&#45;&#45;initialize-at-run-time=org.postgresql.Driver</buildArg>-->
+<!--                                <buildArg>&#45;&#45;report-unsupported-elements-at-runtime</buildArg>-->
+<!--                            </buildArgs>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <!-- Spring Boot 插件 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
