--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -10,7 +10,7 @@
     "allPublicConstructors": true
   },
   {
-    "name": "org.bitmagic.ifeed.domain.record.ArticleIdPair",
+    "name": "org.bitmagic.ifeed.domain.record.ArticleTitle",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true
   },
@@ -23,5 +23,10 @@
     "name": "org.bitmagic.ifeed.application.recommendation.recall.model.UserContext",
     "allDeclaredMethods": true,
     "allDeclaredFields": true
+  },
+  {
+    "name": "org.bitmagic.ifeed.domain.record.ArticleContent",
+    "allDeclaredConstructors": true,
+    "allPublicConstructors": true
   }
 ]
